refactor : 에러 코드 추가 및 서비스에 적용